# immich-public-proxy-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: web.js
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: DropOverlay.tsx  GalleryGrid.tsx  NameModal.tsx  SettingsModal.tsx  UploadToast.tsx
frontend/src/hooks/: useDateScrubber.ts  useGalleryViewport.ts  useLightGallery.ts  useSelection.ts  useUpload.ts  useUploaderFilter.ts
frontend/src/lib/: groupAssetsByDate.ts  layout.ts  uploadStatus.ts
frontend/src/pages/: GalleryPage.tsx  HomePage.tsx  PasswordPage.tsx
public/: style.css  web.js
scripts/community-scripts-ProxmoxVE/: immich-public-proxy-rs.sh
src/: app.rs  dto.rs  immich.rs  lib.rs  main.rs  proxy.rs  server_fns.rs
src/api/: get_share_details.rs  mod.rs
src/immich_client/: client.rs  mod.rs  model.rs
style/: main.css
