[package]
name = "immich-public-proxy-rs"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8.0", optional = true, features = ["macros", "multipart"] }
base64 = "0.22.1"
cfg-if = "1.0.4"
chrono = "0.4.44"
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3.91"
leptos = { version = "0.8.0" }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
leptos_router = { version = "0.8.0" }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["io-util", "rt-multi-thread"], optional = true }
urlencoding = "2.1.3"
wasm-bindgen = { version = "0.2.106", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
web-sys = { version = "0.3.91", features = ["Window", "Document", "Element", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "HtmlInputElement", "FileList", "File", "Blob", "FormData", "Request", "RequestInit", "Response", "Headers"] }

[features]
hydrate = [
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "leptos/hydrate",
]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:reqwest",
    "dep:tokio",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "immich-public-proxy-rs"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# The source style file. If it ends with _.sass_ or _.scss_ then it will be compiled by `dart-sass`
# into CSS and processed by lightning css. When release is set, then it will also be minified.
#
# Optional. Env: LEPTOS_STYLE_FILE.
style-file = "style/main.css"

# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

[lints.rust]
future_incompatible = { level = "deny", priority = -2 }
rust_2018_idioms = { level = "warn", priority = -2 }
unused_qualifications = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(trick_rust_analyzer_into_highlighting_interpolated_bits)',
] }

[lints.clippy]
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
suboptimal_flops = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_box_returns = "warn"
collapsible_else_if = "allow"
collapsible_if = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
manual_flatten = "allow"
bool_assert_comparison = "allow"
box_default = "allow"
single_range_in_vec_init = "allow"
uninlined_format_args = "allow"
