[package]
name = "immich-public-proxy-rs"
version = "0.2.2"
edition = "2024"

[dependencies]
axum = { version = "0.8.0", features = ["macros", "multipart"] }
base64 = "0.22.1"
chrono = "0.4.44"
http-body-util = "0.1.3"
parking_lot = "0.12.5"
reqwest = { version = "0.13", default-features = false, features = ["native-tls-vendored", "json", "stream", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ts-rs = { version = "12.0.1", features = ["chrono-impl"] }
tokio = { version = "1", features = ["io-util", "rt-multi-thread"] }
tower-http = { version = "0.6.0", features = ["fs"] }
urlencoding = "2.1.3"

[lints.rust]
future_incompatible = { level = "deny", priority = -2 }
rust_2018_idioms = { level = "warn", priority = -2 }
unused_qualifications = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(trick_rust_analyzer_into_highlighting_interpolated_bits)',
] }

[lints.clippy]
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
suboptimal_flops = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_box_returns = "warn"
collapsible_else_if = "allow"
collapsible_if = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
manual_flatten = "allow"
bool_assert_comparison = "allow"
box_default = "allow"
single_range_in_vec_init = "allow"
uninlined_format_args = "allow"
